@@ -46,6 +46,7 @@ PLUGIN_DEPENDENCIES     = \
   LSP_PLUGINS_MB_DYNA_PROCESSOR \
   LSP_PLUGINS_MB_EXPANDER \
   LSP_PLUGINS_MB_GATE \
+  LSP_PLUGINS_MB_LIMITER \
   LSP_PLUGINS_MIXER \
   LSP_PLUGINS_NOISE_GENERATOR \
   LSP_PLUGINS_OSCILLATOR \
