@@ -3,9 +3,10 @@
 *******************************************************************************
 
 === 1.2.8 ===
-* Implemented GOTT (Grand Over-the-Top) Compressor plugin series.
+* Implemented GOTT (Grand Over-The-Top) Compressor plugin series.
 * Implemented Filter plugin series.
 * Implemented Flanger plugin series.
+* Implemented Multiband Limiter plugin series.
 * Implemented high-precision oversampling algorithms for Oscilloscope plugin series.
 * Fixed missing audio preview for single-channel Sampler Plugin series.
 * Updated default values for file selectors in Impulse Responses and Impulse Reverb
